--- a/index.html
+++ b/index.html
@@ -6,7 +6,128 @@
     <title>Mi primer Sitio web</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
-<body>
+<body class="content_center">
+    <header class="content_center">
+        <img id="header_foto" src="resource/Foto.jpeg" alt="foto">
+        <h1>Juan Jose Guzman Gomez</h1>
+        <h2>Estudiante de ingenieria</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#listas">Hobbies</a></li>
+            <li><a href="#listas">Tareas Priorizadas</a></li>
+            <li><a href="#horarios">Horario</a></li>
+            <li><a href="">Formulario</a></li>
+        </ul>
+        <a href="https://www.github.com/JuanGuzmanG"><img id="icon" src="resource/github.png" alt="github"></a>
+        <a href="https://www.linkedin.com/in/juanguzmang/"><img id="icon" src="resource/linkedin.png" alt="github"></a>
+    </nav>
     
+    <main>
+        <h3 id="sobremi_titulo">Sobre mí</h3>
+        <p class="sobremi">
+            Soy estudiante de ingenieria en sistemas de la universidad libre, actualmente estoy
+            octavo semestre, me gusta mucho la programacion web, espero especializarme en el 
+            desarrallo Back-end y en un futuro llegar a Full-Stack.
+            <br>
+            <br>
+            Actualmente he tenido experiencia en pasantias programador Trainee en el area back-end usando Java y el framework Spring Boot 
+            y creacion de paginas con WordPress utlizando Elementor
+        </p>
+
+        <section id="listas" class="listas">
+            <ul class="hobbies">
+                <h3>Hobbies</h3>
+                <li>leer libros de suspenso y terror</li>
+                <li>Ver peliculas y leer sobre Cine</li>
+                <li>Programar mini proyectos</li>
+                <li>Jugar juegos de mesa</li>
+                <li>Jugar Videojuegos</li>
+            </ul>
+            <ol class="tareas">
+                <h3>Tareas</h3>
+                <li>Trabajar</li>
+                <li>Trabajos TalentoTech</li>
+                <li>Proyectos Personales</li>
+                <li>Adelantar Tesis</li>
+            </ol>
+        </section>
+        <section id="horarios" class="horario">
+            <h3>Horario</h3>
+            <table cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Hora</th>
+                        <th>lunes</th>
+                        <th>martes</th>
+                        <th>miercoles</th>
+                        <th>jueves</th>
+                        <th>viernes</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>8:00 - 5:00</td>
+                        <td>Trabajar</td>
+                        <td>Trabajar</td>
+                        <td>Trabajar</td>
+                        <td>Trabajar</td>
+                        <td>Trabajar</td>
+                    </tr>
+                    <tr>
+                        <td>6:00 - 10:00</td>
+                        <td>Trabajos TalentoTech</td>
+                        <td>Trabajos TalentoTech</td>
+                        <td>Adelantar Tesis</td>
+                        <td>Proyectos personales</td>
+                        <td>Adelantar Tesis</td>
+                    </tr>
+                    <tr>
+                        <td>10:00 - 12:00</td>
+                        <td>Ajedrez</td>
+                        <td>Cine</td>
+                        <td>Videojuegos</td>
+                        <td>Videojuegos</td>
+                        <td>Cine</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section class="formulario">
+            <h3>Formulario</h3>
+            <form action="">
+                <label><p>Nombre</p><input type="text" name="Nombre" value="Nombre"> </label>
+                <label><p>Asunto</p><input type="text" name="Asunto" value="Asunto"> </label>
+                <label><p>Correo</p><input type="text" name="Mensaje" value="Mensaje"> </label>
+                <input class="button" type="submit">
+            </form>
+        </section>
+    </main>
+    <footer></footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="Scripts/script.js"></script>
 </body>
 </html>
