--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
             </form>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="main_footer">
+            <div class="contacto_footer">Contacto</div>
+            <div class="name_footer">Juan Jose Guzman</div>
+            <div class="redes_footer">Redes sociales</div>
+        </div>
+    </footer>
 
 
 
